[gd_scene load_steps=15 format=3 uid="uid://n1l6rp24qq43"]

[ext_resource type="Script" path="res://_Scripts/Permissions.gd" id="1_1ifmf"]
[ext_resource type="Texture2D" uid="uid://e6ly8r5exeuq" path="res://Sprites/UI/Mute1.png" id="3_7v1u5"]
[ext_resource type="Theme" uid="uid://dhu6swisjlh4w" path="res://Resources/UI_Resources/BlueBubblePanel.tres" id="4_r2cqj"]
[ext_resource type="AudioStream" uid="uid://cto8hsabquh3o" path="res://Sounds/UI/UI - POP.ogg" id="4_y3ard"]
[ext_resource type="StyleBox" uid="uid://b3tjes2hcm3wx" path="res://Resources/UI_Resources/StyleBoxTrasparent.tres" id="5_1p0tt"]
[ext_resource type="PackedScene" uid="uid://cw3ok8v4p620b" path="res://Scenes/Experiments/squiggling_sprite.tscn" id="5_xk0nw"]
[ext_resource type="Texture2D" uid="uid://bonm5jt23witd" path="res://Sprites/UI/SquigglingUI/botonRectangularASQUIG - UI.png" id="6_j6clt"]
[ext_resource type="PackedScene" uid="uid://djhg7jvxtexyl" path="res://Scenes/UI_Scenes/btn_Change_Scene.tscn" id="7_h7gnh"]
[ext_resource type="Script" path="res://_Scripts/ProgressBarController.gd" id="9_x2c2h"]

[sub_resource type="Animation" id="Animation_xklsn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("btnPivot:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_d78yh"]
resource_name = "btnAppear"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("btnPivot:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1.1, 1.1), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_6aur0"]
resource_name = "btnDisappear"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("btnPivot:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1), Vector2(1e-05, 1e-05)]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("btnPivot/AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_y3ard")
}],
"times": PackedFloat32Array(0.1)
}
tracks/1/use_blend = true
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../ButtonChangeScene")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_on_pressed"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bb445"]
_data = {
"RESET": SubResource("Animation_xklsn"),
"btnAppear": SubResource("Animation_d78yh"),
"btnDisappear": SubResource("Animation_6aur0")
}

[sub_resource type="Curve" id="Curve_8uglo"]
_data = [Vector2(0, 0), 0.0, 25.7353, 0, 1, Vector2(0.0175879, 0.452632), 25.7353, 0.230191, 1, 1, Vector2(0.246231, 0.505263), 0.230191, 0.481549, 1, 1, Vector2(0.464824, 0.610526), 0.481549, 1.06063, 1, 1, Vector2(0.663317, 0.821053), 1.06063, 0.605146, 1, 1, Vector2(0.889447, 0.957895), 0.605146, 0.380862, 1, 1, Vector2(1, 1), 0.380862, 0.0, 1, 0]
point_count = 7

[node name="Aclaracion_En_Museo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1ifmf")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.5
anchor_top = 0.44
anchor_right = 0.5
anchor_bottom = 0.44
offset_top = -155.2
offset_bottom = -155.2
grow_horizontal = 2
grow_vertical = 2

[node name="SoundIcon" type="Sprite2D" parent="Control"]
position = Vector2(0, -81)
texture = ExtResource("3_7v1u5")

[node name="Label" type="RichTextLabel" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -315.0
offset_top = 67.0
offset_right = 315.0
offset_bottom = 292.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_r2cqj")
bbcode_enabled = true
text = "[center]SI TE ENCUENTRAS EN
[color=#8e3f2b]MUSEO[/color] [color=#f79433]DR.[/color] [color=#c4122f]ARTURO[/color] [color=#0061a4]UMBERTO[/color] [color=#aed477]ILLIA:[/color]

[color=#dab21e]NO PONGAS EL SONIDO MUY FUERTE.[/color]
[color=#fed0f4]¡RESPETEMOS EL PASEO DE TODOS![/color][b]
"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control"]
libraries = {
"": SubResource("AnimationLibrary_bb445")
}

[node name="btnPivot" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = 375.0
offset_bottom = 375.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1e-05, 1e-05)

[node name="ButtonSkip" type="Button" parent="Control/btnPivot"]
layout_mode = 0
offset_left = -186.0
offset_top = -35.0
offset_right = 189.0
offset_bottom = 38.0
theme_override_styles/hover = ExtResource("5_1p0tt")
theme_override_styles/pressed = ExtResource("5_1p0tt")
theme_override_styles/disabled = ExtResource("5_1p0tt")
theme_override_styles/focus = ExtResource("5_1p0tt")
flat = true

[node name="SquigglingSprite" parent="Control/btnPivot/ButtonSkip" instance=ExtResource("5_xk0nw")]
position = Vector2(188, 36)
scale = Vector2(0.578947, 0.578947)
texture = ExtResource("6_j6clt")

[node name="RichTextLabel" type="RichTextLabel" parent="Control/btnPivot/ButtonSkip"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 19.0
offset_right = 1.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "[center]¡POR SUPUESTO!"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Control/btnPivot"]

[node name="ButtonChangeScene" parent="." instance=ExtResource("7_h7gnh")]
visible = false
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 404.0
offset_bottom = 135.0
grow_horizontal = 1
grow_vertical = 1
NextScene = "mapa_fall_intro"
doPreloadScene = true
smoothness = 0.0

[node name="ProgressBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.453
anchor_right = 0.5
anchor_bottom = 0.453
offset_left = -238.0
offset_top = 154.16
offset_right = 252.0
offset_bottom = 191.16
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("4_r2cqj")
step = 1.0
show_percentage = false
script = ExtResource("9_x2c2h")
curveCharge = SubResource("Curve_8uglo")
TimeToDoCharge = 7.0

[node name="TimerPreLoad" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[connection signal="StartCharge" from="." to="ProgressBar" method="StartLoad"]
[connection signal="pressed" from="Control/btnPivot/ButtonSkip" to="Control/AnimationPlayer" method="play" binds= ["btnDisappear"]]
[connection signal="SceneLoaded" from="ButtonChangeScene" to="." method="chargeFiles"]
[connection signal="finishCharge" from="ProgressBar" to="Control/AnimationPlayer" method="play" binds= ["btnAppear"]]
[connection signal="timeout" from="TimerPreLoad" to="ButtonChangeScene" method="PreloadScene"]
