[gd_scene load_steps=10 format=3 uid="uid://cdk7clp1d0s2q"]

[ext_resource type="Script" path="res://_Scripts/Permissions.gd" id="1_dyu4g"]
[ext_resource type="PackedScene" uid="uid://b00ok4g2p2vql" path="res://Scenes/mapa_fall_intro.tscn" id="2_0l4or"]
[ext_resource type="Theme" uid="uid://dhu6swisjlh4w" path="res://Resources/UI_Resources/BlueBubblePanel.tres" id="2_nte6i"]
[ext_resource type="Script" path="res://_Scripts/ProgressBarController.gd" id="3_ec5as"]
[ext_resource type="PackedScene" uid="uid://n1l6rp24qq43" path="res://Scenes/aclaracion_en_museo.tscn" id="3_ftah7"]
[ext_resource type="Texture2D" uid="uid://d0f4d37ihb644" path="res://Sprites/icono-logo.png" id="6_7mwu8"]

[sub_resource type="Curve" id="Curve_5fir6"]
_data = [Vector2(0, 0), 0.0, 25.7353, 0, 1, Vector2(0.0175879, 0.452632), 25.7353, 0.230191, 1, 1, Vector2(0.246231, 0.505263), 0.230191, 0.481549, 1, 1, Vector2(0.464824, 0.610526), 0.481549, 1.06063, 1, 1, Vector2(0.663317, 0.821053), 1.06063, 0.605146, 1, 1, Vector2(0.889447, 0.957895), 0.605146, 0.380862, 1, 1, Vector2(1, 1), 0.380862, 0.0, 1, 0]
point_count = 7

[sub_resource type="Animation" id="Animation_ib3ya"]
resource_name = "frases"
length = 7.0
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 2.15, 2.25, 4.4, 4.5, 6.65, 6.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": ["", "[center]CONSULTANDO PLANOS", "", "[center]DESYUYANDO TERRENO", "", "[center]SEÃ‘ALIZANDO SENDERO", "", "[center]QUITANDO CONOS DE OBRA"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_10tab"]
_data = {
"frases": SubResource("Animation_ib3ya")
}

[node name="Escena_Carga" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dyu4g")
InstroScene = ExtResource("2_0l4or")
DisclaimerScene = ExtResource("3_ftah7")

[node name="BackGround" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="ProgressBar" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="ProgressBar" type="ProgressBar" parent="ProgressBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -245.0
offset_top = -100.0
offset_right = 245.0
offset_bottom = -63.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_nte6i")
step = 1.0
show_percentage = false
script = ExtResource("3_ec5as")
curveCharge = SubResource("Curve_5fir6")
TimeToDoCharge = 7.0

[node name="RichTextLabel" type="RichTextLabel" parent="ProgressBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -229.0
offset_top = -20.0
offset_right = 229.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_nte6i")
bbcode_enabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="ProgressBar/RichTextLabel"]
autoplay = "frases"
libraries = {
"": SubResource("AnimationLibrary_10tab")
}

[node name="TextureRect" type="TextureRect" parent="ProgressBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -156.0
offset_top = -428.0
offset_right = 156.0
offset_bottom = -116.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_7mwu8")

[node name="BlackScreen" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="BlackScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[connection signal="finishCharge" from="ProgressBar/ProgressBar" to="." method="GoToIntroScene"]
